added recyclerview dependency and component to layout. Created base layout and recycler view item layout.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     implementation              dependencies.appCompat
     implementation              dependencies.coreKtx
     implementation              dependencies.constraintLayout
+    implementation              dependencies.recyclerview
 
 
     testImplementation          testDependencies.jUnit
