--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -11,6 +11,7 @@ ext {
     core_ktx_version            = '1.1.0'
     gradle_version              = '3.5.3'
     kotlin_version              = '1.3.61'
+    material_version            = '1.0.0'
     recyclerview_version        = '1.1.0'
 
     //Tests Dependencies
@@ -23,6 +24,7 @@ ext {
             constraintLayout: "androidx.constraintlayout:constraintlayout:$constraint_layout_version",
             coreKtx         : "androidx.core:core-ktx:$core_ktx_version",
             kotlin          : "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version",
+            material        : "com.google.android.material:material:$material_version",
             recyclerview    : "androidx.recyclerview:recyclerview:$recyclerview_version",
     ]
 
