--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,13 +31,14 @@ dependencies {
     def dependencies        = rootProject.ext.dependencies
     def testDependencies    = rootProject.ext.testDependencies
 
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation              project(path: ':data')
 
     implementation              dependencies.kotlin
     implementation              dependencies.appCompat
     implementation              dependencies.coreKtx
     implementation              dependencies.constraintLayout
     implementation              dependencies.material
+    implementation              dependencies.picasso
     implementation              dependencies.recyclerview
 
 
