--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -12,6 +12,7 @@ ext {
     gradle_version              = '3.5.3'
     kotlin_version              = '1.3.61'
     material_version            = '1.0.0'
+    picasso_version             = '2.71828'
     recyclerview_version        = '1.1.0'
 
     //Tests Dependencies
@@ -25,6 +26,7 @@ ext {
             coreKtx         : "androidx.core:core-ktx:$core_ktx_version",
             kotlin          : "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version",
             material        : "com.google.android.material:material:$material_version",
+            picasso         : "com.squareup.picasso:picasso:$picasso_version",
             recyclerview    : "androidx.recyclerview:recyclerview:$recyclerview_version",
     ]
 
