--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,15 +31,19 @@ dependencies {
     def dependencies        = rootProject.ext.dependencies
     def testDependencies    = rootProject.ext.testDependencies
 
+    implementation              project(path: ':presentation')
     implementation              project(path: ':data')
 
     implementation              dependencies.kotlin
     implementation              dependencies.appCompat
     implementation              dependencies.coreKtx
+    implementation              dependencies.coroutine
+    implementation              dependencies.coroutineAndroid
     implementation              dependencies.constraintLayout
     implementation              dependencies.material
     implementation              dependencies.picasso
     implementation              dependencies.recyclerview
+    implementation              dependencies.lifecycle
 
 
     testImplementation          testDependencies.jUnit
