--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -9,8 +9,10 @@ ext {
     app_compat_version          = '1.1.0'
     constraint_layout_version   = '1.1.3'
     core_ktx_version            = '1.1.0'
+    coroutine_version           = '1.3.2'
     gradle_version              = '3.5.3'
     kotlin_version              = '1.3.61'
+    lifecycle_version           = '2.1.0'
     material_version            = '1.0.0'
     picasso_version             = '2.71828'
     recyclerview_version        = '1.1.0'
@@ -24,10 +26,14 @@ ext {
             appCompat       : "androidx.appcompat:appcompat:$app_compat_version",
             constraintLayout: "androidx.constraintlayout:constraintlayout:$constraint_layout_version",
             coreKtx         : "androidx.core:core-ktx:$core_ktx_version",
+            coroutine       : "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutine_version",
+            coroutineAndroid: "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutine_version",
             kotlin          : "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version",
+            lifecycle       : "androidx.lifecycle:lifecycle-extensions:$lifecycle_version",
             material        : "com.google.android.material:material:$material_version",
             picasso         : "com.squareup.picasso:picasso:$picasso_version",
             recyclerview    : "androidx.recyclerview:recyclerview:$recyclerview_version",
+            viewmodel       : "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version",
     ]
 
     testDependencies = [
