--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -1,36 +1,44 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+
 android {
-    compileSdkVersion 29
-    buildToolsVersion "29.0.2"
 
+    def globalConfiguration = rootProject.extensions.getByName("ext")
 
+    compileSdkVersion       globalConfiguration.compile_version
+    buildToolsVersion       globalConfiguration.build_tools_version
     defaultConfig {
-        minSdkVersion 21
-        targetSdkVersion 29
+        minSdkVersion       globalConfiguration.min_sdk_version
+        targetSdkVersion    globalConfiguration.target_sdk_version
         versionCode 1
         versionName "1.0"
-
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        consumerProguardFiles 'consumer-rules.pro'
     }
-
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.1.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+    def dependencies        = rootProject.ext.dependencies
+    def testDependencies    = rootProject.ext.testDependencies
+
+    implementation              project(path: ':data')
+
+    implementation              dependencies.kotlin
+    implementation              dependencies.appCompat
+    implementation              dependencies.coreKtx
+    implementation              dependencies.coroutine
+    implementation              dependencies.coroutineAndroid
+    implementation              dependencies.lifecycle
+    implementation              dependencies.viewmodel
+
+    testImplementation          testDependencies.jUnit
+    androidTestImplementation   testDependencies.jUnitTestExt
+    androidTestImplementation   testDependencies.espresso
 }
