--- a/data_api/build.gradle
+++ b/data_api/build.gradle
@@ -21,6 +21,15 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    compileOptions {
+        sourceCompatibility = JavaVersion.VERSION_1_8
+        targetCompatibility = JavaVersion.VERSION_1_8
+    }
+
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 }
 
 dependencies {
@@ -33,6 +42,9 @@ dependencies {
     implementation              dependencies.kotlin
     implementation              dependencies.appCompat
     implementation              dependencies.coreKtx
+    implementation              dependencies.retrofit
+    implementation              dependencies.gson
+    implementation              dependencies.loginInterceptor
 
     testImplementation          testDependencies.jUnit
     androidTestImplementation   testDependencies.jUnitTestExt
