--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
 
@@ -29,6 +30,7 @@ dependencies {
     def testDependencies    = rootProject.ext.testDependencies
 
     implementation              project(path: ':data')
+    implementation              project(path: ':data_api')
 
     implementation              dependencies.kotlin
     implementation              dependencies.appCompat
