--- a/data/build.gradle
+++ b/data/build.gradle
@@ -6,6 +6,7 @@ dependencies {
     def dependencies = rootProject.ext.dependencies
 
     implementation dependencies.kotlin
+    implementation dependencies.retrofit
 
 }
 
