--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -11,6 +11,7 @@ ext {
     core_ktx_version            = '1.1.0'
     coroutine_version           = '1.3.2'
     gradle_version              = '3.5.3'
+    koin_version                = '2.0.1'
     kotlin_version              = '1.3.61'
     lifecycle_version           = '2.1.0'
     material_version            = '1.0.0'
@@ -31,6 +32,9 @@ ext {
             coroutine       : "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutine_version",
             coroutineAndroid: "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutine_version",
             gson            : "com.squareup.retrofit2:converter-gson:$retrofit_version",
+            koin            : "org.koin:koin-android:$koin_version",
+            koinScope       : "org.koin:koin-android-scope:$koin_version",
+            koinViewModel   : "org.koin:koin-android-viewmodel:$koin_version",
             kotlin          : "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version",
             lifecycle       : "androidx.lifecycle:lifecycle-extensions:$lifecycle_version",
             loginInterceptor: "com.squareup.okhttp3:logging-interceptor:$okhttp_version",
